# dhruv-email-integration

./: .gitignore  README.md
app/: Dockerfile  parameters.json.sample  pyproject.toml
app/app/: app.py  initial_data.py  main.py  o365_token.txt  scheduler.py
app/app/api/: deps.py  endpoint.py
app/app/api/api_v1/: api.py
app/app/api/v1/: api_v1.py  auth.py  mail.py  test.py  user.py  users.py
app/app/apiclients/: api_client.py  aws_client.py  endpoint.py  endpoint_ms.py  file_client.py
app/app/controllers/: common.py  mail.py  user.py  users.py
app/app/core/: auth.py  config.py  db.py  description.py  identity.py  log.py  settings.py  try_catch_final.py
app/app/crud/: base.py  crud_correspondence.py  crud_correspondence_id.py  crud_se_correspondence.py  stored_procedures.py
app/app/db/: base.py  base_class.py  db_session.py  init_db.py
app/app/middlewares/: middleware_tracer.py
app/app/models/: __init__.py  correspondance.py  correspondance_id.py  dlq.py  se_correspondence.py
app/app/schemas/: schema_db.py  schema_endpoint_ms.py  schema_log.py  schema_ms_graph.py  schema_sp.py
app/configuration/: config.sample.yml  endpoints_ms.json  global_config.sample.yml  ms_auth_configs.sample.json
app/docker/: docker-compose.yml
app/tests/: conftest.py
app/tests/apiclients/: test_api_client.py
app/tests/configuration/: endpoints_ms.json
app/tests/controllers/: test_mail.py
app/tests/core/: test_config.py  test_try_catch_final.py
app/tests/crud/: test_base.py  test_crud_correspondence.py  test_crud_correspondence_id.py
(+6 files in other folders)
