[tool.poetry]
name = "app"
version = "0.1.0"
description = "o365-manager"
authors = ["Manali Patil <mmpatil34@gmail.com>", "Anurag Jha <toanuragjha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
Sphinx = "2.2.2"
requests = "^2.27.1"
requests-oauthlib = "^1.3.1"
stringcase = "^1.2.0"
python-dateutil = "^2.8.2"
pytz = "^2021.3"
pydantic = "^1.9.0"
loguru = "^0.6.0"
aiohttp = "^3.8.1"
async-timeout = "^4.0.2"
msal = "^1.16.0"
boto3 = "^1.20.49"
SQLAlchemy = "^1.4.31"
pymssql = "2.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
